Update csv file path

--- a/News cleaning script.ipynb
+++ b/News cleaning script.ipynb
@@ -75,12 +75,12 @@
    "outputs": [],
    "source": [
     "#Upload Nexus csv \n",
-    "Nexus_csv_path = 'C:/Users/josie/OneDrive/Documents/UWE/Group project/Headline_data_v2.csv'\n",
+    "Nexus_csv_path = 'Headline_data_v2.csv'\n",
     "Nexus_data_raw = pd.read_csv(csv_path, encoding='windows-1252')\n",
     "\n",
     "\n",
     "#Upload Kaggle csv\n",
-    "Kaggle_csv_path = 'C:/Users/josie/OneDrive/Documents/UWE/Group project/Kaggle data.csv'\n",
+    "Kaggle_csv_path = 'Kaggle data.csv'\n",
     "Kaggle_data_raw = pd.read_csv(Kaggle_csv_path, encoding='utf-8')"
    ]
   },
